--- a/themes/timer-hugo/layouts/_default/single.html
+++ b/themes/timer-hugo/layouts/_default/single.html
@@ -7,10 +7,7 @@
                 <div class="block">
                     <h2>{{ .Title }}</h2>
                     <div class="portfolio-meta">
-                        <span>{{ dateFormat "Monday, Jan 2, 2006" .Date }}</span>|
-                        <span> Tags:
-                            {{ if ne .Params.tags nil }}{{ delimit .Params.tags ", " }}{{ end }}
-                        </span>
+                        <span>{{ dateFormat "Monday, Jan 2, 2006" .Date }}</span>
                     </div>
                 </div>
             </div>
