--- a/themes/timer-hugo/assets/css/style.css
+++ b/themes/timer-hugo/assets/css/style.css
@@ -293,7 +293,7 @@ a:hover {
   padding: 230px 0;
   color: #fff;
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
-  position: relative;
+  position: absolute;
 }
 
 #hero-area:before {
