--- a/themes/timer-hugo/assets/css/style.css
+++ b/themes/timer-hugo/assets/css/style.css
@@ -287,7 +287,7 @@ a:hover {
 
 #hero-area {
   background-repeat: no-repeat;
-  background-position: center center;
+  background-position: center top;
   background-size: contain;
   background-attachment: fixed;
   padding: 230px 0;
