--- a/themes/timer-hugo/assets/css/style.css
+++ b/themes/timer-hugo/assets/css/style.css
@@ -290,16 +290,16 @@ a:hover {
   background-position: center top;
   background-size: contain;
   background-attachment: fixed;
-  padding: 230px 0;
+  padding: 210px 0;
   color: #fff;
-  box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
+  /*box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);*/
   position: relative;
 }
 
 #hero-area:before {
   content: '';
   z-index: 9;
-  background: rgba(255, 255, 255, 0.78);
+  /*background: rgba(255, 255, 255, 0.78);*/
   position: absolute;
   top: 0;
   left: 0;
@@ -498,7 +498,10 @@ a:hover {
 figure {
   background: #fff;
   margin-bottom: 45px;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.04), 0 2px 10px 0 rgba(0, 0, 0, 0.06);
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.04), 0 2px 10px 0 rgba(0, 0, 0, 0.06);
 }
 
 figure .img-wrapper {
@@ -509,10 +512,14 @@ figure .img-wrapper {
 figure img {
   transform: scale3d(1, 1, 1);
   transition: transform 400ms;
+  border:1;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 figure:hover img {
-  transform: scale3d(1.2, 1.2, 1);
+  transform: scale3d(1.3, 1.3, 1);
 }
 
 figure:hover .overlay {
